# SickConsiderableComputationallinguistics

./: _scratch.txt  main.py  mains.py  pyproject.toml  replit.nix  scratch.txt
.plandex/: project.json
schema/: LongTrees.Growers.json  LongTrees.SeedSource.json  LongTrees.Sub-successuon.json  LongTrees.Tree List.json  compass-connections.json
src/: app.py  main.py  main2.py  mains.py  mainscopy.py
templates/: _grower_item.html  _seed_source_item.html  _sub_succesion_item.html  _tree_item.html  add_grower.html  add_seed_source.html  add_sub_succession.html  add_tree.html  index.html  list_growers.html  list_seed_sources.html  list_sub_successions.html  list_trees.html
