[tool.poetry]
name = "longtrees-form"
version = "0.1.0"
description = "Dynamic Form to Maintain LongTrees Index database"
authors = ["Jeff Barlow <jeff.barlow.spady@gmail.com>"]
license = "BSD"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
motorhead = "^0.2408.0"
fastapi = {extras = ["all"], version = "^0.112.1"}
quart = "^0.19.6"
pymongo = {extras = ["srv"], version = "^4.8.0"}

[tool.poetry.group.dev.dependencies]
fastapi = "^0.112.1"
motorhead = "^0.2408.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
